Mon Feb  9 07:00:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/bmake.mpd:

          Added the custom generated files to the realclean target.

Sun Feb  8 15:36:30 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * THANKS: Just added the 1,800th contributor to the THANKS file!!

Sun Feb  8 15:34:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Also generate a realclean target for the IDL files so that IDL
          generated files are removed when running a realclean.

Sun Feb  8 14:25:43 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/cbx.mpd:
          Added first version support of using the Cygwin compiler within
          the CBuilderX Development Environment

Sun Feb  8 14:02:53 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/cbx.mpd:
          Added MinGW support for in the CBuilderX IDE

Sun Feb  8 13:06:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/cbx.mpd:
          Improved the CBuilderX template. Don't compile template files and
          disabled some warnings.

Sat Feb  7 19:33:56 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * examples/RMCast/Send_File/Sender.cpp (ACE_TMAIN):
          Fixed a typo in the comments.  Thanks to Olli Savia <ops@iki.fi>
          for the patch.

Fri Feb  6 15:49:37 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_client.mpb:
        * bin/MakeProjectCreator/config/ciao_servant.mpb:

          Added TAO_ROOT/tao and CIAO_ROOT/ciao to the include
          paths (C++ and (C)IDL). These additions allow users
          to include <orb.idl> or <Components.idl> without
          being concerned about the specific directory they
          reside in.

Fri Feb  6 14:53:27 2004  Tao Lu  <lu@dre.vanderbilt.edu>
